tests/snapshots/run_wpt_conformance__litert_gather_float32_2D_tensor_and_int32_0D_out-of-bound_positive_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 2D tensor and int32 0D out-of-bound positive indices default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[2, 12];
  }

  consts {
    operand_0: i32[] @bytes([10, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
